--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "scripts": {
+    "dev": "lite-server"
+  },
   "dependencies": {
+    "@truffle/contract": "^4.3.25",
     "ethers": "^5.2.0",
-    "truffle-assertions": "^0.9.2"
+    "lite-server": "^2.6.1",
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.3.6"
   }
 }
